--- a/game.html
+++ b/game.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Quiz Page</title>
-    <link rel="stylesheet" href="./assets/css/style.css">
+    <link rel="stylesheet" href="./assets/css/style2.css">
     <link rel="stylesheet" href="./assets/css/game.css">
 </head>
 <body>
@@ -29,7 +29,7 @@
                     </h1>
                 </div>
             </div>
-            <div id="question">Answer the answer below</div>
+            <h1 id="question">Answer the answer below</h1>
             <div class="choice-container">
                 <p class="choice-prefix">A</p>
                 <p class="choice-text" data-number="1">Choice 1</p>
@@ -48,6 +48,6 @@
             </div>
         </div>
     </div>
-    <script src="game.js"></script>
+    <script src="./assets/js/game.js"></script>
 </body>
 </html>
