--- a/compare.html
+++ b/compare.html
@@ -1,17 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Quiz Page</title>
-    <link rel="stylesheet" href="./assets/css/style.css">
-    <link rel="stylesheet" href="./assets/css/game.css">
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="game.css">
 </head>
-
 <body>
-    
     <div class="container">
         <div id="game" class="justify-center flex-column">
             <div id="hud">
@@ -32,10 +28,10 @@
                     </h1>
                 </div>
             </div>
-            <h1 id="question">Answer the answer below</h1>
+            <h1 id="question">What is the answer to this question</h1>
             <div class="choice-container">
                 <p class="choice-prefix">A</p>
-                <p class="choice-text" data-number="1">Choice 1</p>
+                <p class="choice-text" data-number="1">Choice</p>
             </div>
             <div class="choice-container">
                 <p class="choice-prefix">B</p>
@@ -51,7 +47,6 @@
             </div>
         </div>
     </div>
-    <script src="./assets/js/game.js"></script>
+    <script src="game.js"></script>
 </body>
-
 </html>
