--- a/index.html
+++ b/index.html
@@ -1,40 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Code Quiz</title>
-  <link rel="stylesheet" href="./assets/css/style.css">
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Code Quiz</title>
+    <link rel="stylesheet" href="./assets/css/style.css">
+    
 </head>
 
 <body>
-
-  <header>
-    <h1 class="page-title">Code Quiz</h1>
-    <p>Answer 10 questions within the time limit.</p>
-    <p>Click the button below to Start!</p>
-  </header>
-
-  <div class="container">
-    <div id="question-container" class="hide">
-      <div id="question">Question</div>
-      <div id="answer-buttons" class="btn-grid">
-        <button class="btn">Answer 1</button>
-        <button class="btn">Answer 2</button>
-        <button class="btn">Answer 3</button>
-        <button class="btn">Answer 4</button>
-      </div>
+    <div class="container">
+        <div id="home" class="flex-column flex-center">
+            <h1>Are you Ready?</h1>
+            <a href='./game.html' class="btn">Play</a>
+            <a href='./highscores.html' id="highscore-btn" class="btn">High Scores</a>
+        </div>
     </div>
-    <div class="controls">
-      <button id="start-btn" class="start-btn btn">Start</button>
-      <button id="next-btn" class="next-btn btn hide">Next</button>
-      <button id="score-btn" class="score-btn btn">High Scores</button>
-    </div>
-  </div>
-
-  <script src="./assets/js/script.js"></script>
 </body>
 
 </html>
