--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Code Quiz</title>
+    <title>JavaScript Code Quiz</title>
     <link rel="stylesheet" href="./assets/css/style.css">
     
 </head>
@@ -12,7 +12,7 @@
 <body>
     <div class="container">
         <div id="home" class="flex-column flex-center">
-            <h1>Are you Ready?</h1>
+            <h1>JavaScript Code Quiz</h1>
             <a href='./game.html' class="btn">Play</a>
             <a href='./highscores.html' id="highscore-btn" class="btn">High Scores</a>
         </div>
