added timer feature

--- a/game.html
+++ b/game.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-    
+
     <div class="container">
         <div id="game" class="justify-center flex-column">
             <div id="hud">
@@ -22,6 +22,14 @@
                     <div id="progressBar">
                         <div id="progressBarFull"></div>
                     </div>
+                </div>
+                <div class="hud-item">
+                    <p class="hud-prefix">
+                        Time Left
+                    </p>
+                    <h1 class="hud-main-text" id="timer">
+                        20
+                    </h1>
                 </div>
                 <div class="hud-item">
                     <p class="hud-prefix">
